@@ -1,3 +1,8 @@
+package donaciones.domain.algoritmos;
+
+import donaciones.domain.DonacionIndependiente;
+import donaciones.domain.EntidadBeneficiaria;
+
 import java.util.List;
 import java.util.Comparator;
 import java.util.stream.Collectors;
@@ -8,7 +13,8 @@ public class PrioridadSubAtendidos implements EstrategiaAsignacion {
   public List<EntidadBeneficiaria> sugerirEntidades(DonacionIndependiente donacion, List<EntidadBeneficiaria> entidades) {
     return entidades
             .stream()
-            .sorted(Comparator.comparingLong(EntidadBeneficiaria::getDonacionesRecibidasUltimoTrimestre))
-            .limit(10).collect(Collectors.toList());
+            .sorted(Comparator.comparingInt(EntidadBeneficiaria::getDonacionesUltimoTrimestre))
+            .limit(10)
+            .toList();
   }
 }
